	  Added/updated entries for Konica Minolta magicolor DL series.

	* driver/rastertokmXXXXdl.xml: Added entry for the free CUPS driver
	  which Konica Minolta supplies for the magicolor DL series.

	* driver/foo2zjs.xml, opt/foo2zjs-ICM.xml,
	  opt/foo2zjs-InputSlot.xml: Updated "foo2zjs" driver entry for
	  Konica Minolta magicolor DL series changes.

2006-05-02  Shiyun Yie <shiyun.yie@hp.com>
	
	* PPD/: Add 3 new HP Postscript Printers
	* printer/: Added 5 new HP printers xml files.

2006-03-31  George Liu <george.liu@ussj.ricoh.com>

	* PPD/:     Added 5 Postscript and 42 pxlmono Ricoh Family and OEM PPD files.
	* printer/: Added 5 Postscript and updated 42 pxlmono Ricoh Family and OEM xml files.
	* driver/:  Updated Postscript.xml and pxlmono.xml

2006-03-29  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_F300.xml: Fixed model name and ID of this
	  printer entry.

	* driver/ptouch.xml, opt/Brother-Ptouch-AdvanceDistance.xml,
	  opt/Brother-Ptouch-AdvanceMedia.xml,
	  opt/Brother-Ptouch-Align.xml,
	  opt/Brother-Ptouch-BytesPerLine.xml,
	  opt/Brother-Ptouch-ConcatPages.xml,
	  opt/Brother-Ptouch-CutMark.xml, opt/Brother-Ptouch-CutMedia.xml,
	  opt/Brother-Ptouch-HalfCut.xml,
	  opt/Brother-Ptouch-LabelPreamble.xml,
	  opt/Brother-Ptouch-MirrorPrint.xml,
	  opt/Brother-Ptouch-NegativePrint.xml,
	  opt/Brother-Ptouch-PageSize.xml,
	  opt/Brother-Ptouch-PixelTransfer.xml,
	  opt/Brother-Ptouch-PrintDensity.xml,
	  opt/Brother-Ptouch-PrintQuality.xml,
	  opt/Brother-Ptouch-Resolution.xml,
	  opt/Brother-Ptouch-RollFedMedia.xml,
	  opt/Brother-Ptouch-SoftwareMirror.xml,
	  opt/Brother-Ptouch-TransferMode.xml,
	  printer/Brother-PT-1500PC.xml, printer/Brother-PT-18R.xml,
	  printer/Brother-PT-1950VP.xml, printer/Brother-PT-1950.xml,
	  printer/Brother-PT-1960.xml, printer/Brother-PT-2420PC.xml,
	  printer/Brother-PT-2450DX.xml, printer/Brother-PT-2500PC.xml,
	  printer/Brother-PT-2600.xml, printer/Brother-PT-2610.xml,