@@ -494,6 +494,9 @@
       <id>printer/HP-Color_LaserJet_2550</id>
     </printer>
     <printer>
+      <id>printer/HP-Color_LaserJet_2605</id>
+    </printer>
+    <printer>
       <id>printer/HP-Color_LaserJet_2800</id>
     </printer>
     <printer>
@@ -697,6 +700,12 @@
     </printer>
     <printer>
       <id>printer/HP-LaserJet_5100</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_5200</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_5200L</id>
     </printer>
     <printer>
       <id>printer/HP-LaserJet_5M</id>
