@@ -15,6 +15,8 @@
 	  opt/foo2zjs-InputSlot.xml: Updated "foo2zjs" driver entry for
 	  Konica Minolta magicolor DL series changes.
 
+	* driver/Postscript.xml: Added new HP printers.
+
 2006-05-02  Shiyun Yie <shiyun.yie@hp.com>
 	
 	* PPD/: Add 3 new HP Postscript Printers
